syntax = "proto3";

option csharp_namespace = "Shamyr.Cloud.Identity.Service.Protos";

package identity;

service Users {
  rpc GetById (GetByIdRequest) returns (GetByIdReply);
  rpc GetByToken (GetByTokenRequest) returns (GetByTokenReply);
}

message GetByIdRequest {
  string userId = 1;
}

message GetByTokenRequest {
  string token = 1;
}

message UserIdentityProfileMessage {
  enum PermissionKind {
    View = 0;
    Control = 1;
    Configure = 2;
    Own = 3;
    None = 99;
  }
  
  string id = 1;
  string username = 2;
  string email = 3;
  bool disabled = 4;
  PermissionKind permissionKind = 6;
}

message GetByIdReply {
  UserIdentityProfileMessage profileMessage = 1;
}

message GetByTokenReply {
  enum IdentityResult {
    Ok = 0;
    Invalid = 1;
    LoggedOut = 2;
    NotVerified = 3;
    Disabled = 4;
    NotFound = 5;
  }

  IdentityResult identityResult = 1;
  UserIdentityProfileMessage profileMessage = 2;
}
